final changes to deploy

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 ﻿
-DB_HOST=localhost
+DB_HOST=centerbeam.proxy.rlwy.net
+DB_PORT=48311
 DB_USER=root
-DB_PASSWORD=Prit$5656
-DB_NAME=codevimarsh
-DB_PORT=3306
+DB_PASSWORD=LrfWHIuXbsOFEIBxEvUYFhbpPcBksjfY
+DB_NAME=railway
 
 
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
